OO-7862: Adjust some details in the GUI of the topic broker